--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
 
 <title>WHITE SCORPION FAN</title>
 <link href="css/singlePageTemplate.css" rel="stylesheet" type="text/css">
-<script src="http://use.edgefonts.net/source-sans-pro:n2:default.js" type="text/javascript"></script>
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -18,13 +17,11 @@
 </head>
 <body>
   <!-- Navigation -->
-  <header class="header"> <a href="">
-    <h4 class="logo"></h4>
-    </a>
+  <header class="header">
     <nav>
       <ul>
         <li><a href="#top">TOP</a></li>
-        <li><a href="#media">CONTENTS</a></li>
+        <li><a href="#music">MUSIC</a></li>
         <li> <a href="#members">MEMBER</a></li>
       </ul>
     </nav>
@@ -35,7 +32,7 @@
   <!-- Hero Section -->
 	
   <section class="home" id="top">
-    <p class="icon"><img src="images/icon.png" width="128px" height=auto alt=""/></p>
+    <p class="icon"><img src="images/icon.webp" width="128px" height=auto alt=""/></p>
 	<h2 class="home_header">WHITE SCORPION</h2>
 	<p class="tagline">WHITE SCORPIONファンによる<BR>非公式リンクページです</p>
   </section>
@@ -44,30 +41,30 @@
   <section class="center">
 	<h3>WHITE SCORPION OFFICIAL</h3>
 	<ul class="official_link">
-		<li><a href="https://whitescorpion.jp/"><img src="images/web.png" alt=""/></a></li>
-		<li><a href="https://fc.whitescorpion.jp/"><img src="images/fan.png" /></a></li>
-		<li><a href="https://x.com/whsp_official"><img src="images/x.png" /></a></li>
-		<li><a href="https://www.instagram.com/whsp_official"><img src="images/insta.png" /></a></li>
-		<li><a href="https://www.tiktok.com/@whsp_official"><img src="images/tiktok.png" /></a></li>
+		<li><a href="https://whitescorpion.jp/"><img src="images/web.webp" alt=""/></a></li>
+		<li><a href="https://fc.whitescorpion.jp/"><img src="images/fan.webp" /></a></li>
+		<li><a href="https://x.com/whsp_official"><img src="images/x.webp" /></a></li>
+		<li><a href="https://www.instagram.com/whsp_official"><img src="images/insta.webp" /></a></li>
+		<li><a href="https://www.tiktok.com/@whsp_official"><img src="images/tiktok.webp" /></a></li>
 	</ul>
 	<ul class="official_link">
-		<li><a href="https://open.spotify.com/artist/5LNpqa89tsQv64QYzfvsE5?si=zre4QlWfSbmrgZxL9vR04g"><img src="images/spotify.png" alt=""/></a></li>
-		<li><a href="https://m.youtube.com/@whsp_official"><img src="images/youtube.png" /></a></li>
-		<li><a href="https://music.youtube.com/channel/UCOPhAIdtSBUkt3mG6ErnwWg?feature=shared"><img src="images/youtubem.png" /></a></li>
-		<li><a href="https://music.apple.com/jp/artist/white-scorpion/1717706335?ls"><img src="images/applem.png" /></a></li>
-		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.png" /></a></li>
-		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.png" /></a></li>
+		<li><a href="https://open.spotify.com/artist/5LNpqa89tsQv64QYzfvsE5?si=zre4QlWfSbmrgZxL9vR04g"><img src="images/spotify.webp" alt=""/></a></li>
+		<li><a href="https://m.youtube.com/@whsp_official"><img src="images/youtube.webp" /></a></li>
+		<li><a href="https://music.youtube.com/channel/UCOPhAIdtSBUkt3mG6ErnwWg?feature=shared"><img src="images/youtubem.webp" /></a></li>
+		<li><a href="https://music.apple.com/jp/artist/white-scorpion/1717706335?ls"><img src="images/applem.webp" /></a></li>
+		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.webp" /></a></li>
+		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.webp" /></a></li>
 	</ul>
     <hr>
 
 	<h3>WHITE SCORPION MANAGER</h3>
 	<ul class="official_link">
-		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/tiktok.png" /></a></li>
+		<li><a href="https://www.tiktok.com/@whsp_manager"><img src="images/tiktok.webp" /></a></li>
 	</ul>
   </section>
   <hr>
-  <section class="media" id="media">
-	  <h2>CONTENTS</h2>
+  <section class="media" id="music">
+	  <h2>MUSIC</h2>
 	<div class="youtube">
 		<iframe src="https://www.youtube.com/embed/xlXkw-ShPjQ?si=EFQB8u9f5GQT55Tf" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	</div>
@@ -75,13 +72,7 @@
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="370" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official"  data-autoplay="false" muted data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px; height: 304px; " >
-    		<section><a target="_blank" href="https://www.tiktok.com/@whsp_official">@whsp_official</a></section>
-	</blockquote>
-	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager"  data-autoplay="false" muted data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px; height: 284px;" >
-		<section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager">@whsp_manager</a> </section>
-	</blockquote>  
-  	<script async="async" src="https://www.tiktok.com/embed.js"></script>
+
   </section>
   <hr>
   <section class="members" id="members">
@@ -90,126 +81,137 @@
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACE</p>
+				<p class="member_item_birth">BIRTH  11.6</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/ace_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/ace_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ace-new.png">
+			  <img class="member_img" src="images/member-ace-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ACO</p>
+				<p class="member_item_birth">BIRTH  5.30</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/aco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-aco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/aco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aco-new.png">
+			  <img class="member_img2" src="images/member-aco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">ALLY</p>
+				<p class="member_item_birth">BIRTH  4.17</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/ally_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/ally_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ally-new.png">
+			  <img class="member_img" src="images/member-ally-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">AOI</p>
+				<p class="member_item_birth">BIRTH  10.13</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/aoi_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aoi-new.png">
+			  <img class="member_img2" src="images/member-aoi-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">CHOCO</p>
+				<p class="member_item_birth">BIRTH  12.27</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/choco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/choco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-choco-new.png">
+			  <img class="member_img" src="images/member-choco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">COCO</p>
+				<p class="member_item_birth">BIRTH  3.18</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/coco_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/coco_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-coco-new.png">
+			  <img class="member_img2" src="images/member-coco-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">HANNA</p>
+				<p class="member_item_birth">BIRTH  12.17</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/hanna_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/hanna_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-hanna-new.png">
+			  <img class="member_img" src="images/member-hanna-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">MOMO</p>
+				<p class="member_item_birth">BIRTH  12.7</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/momo_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.png" /></a></li>
-					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-momo-new.png">
+			  <img class="member_img2" src="images/member-momo-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NATSU</p>
+				<p class="member_item_birth">BIRTH  7.16</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/natsu_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/natsu_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-natsu-new.png">
+			  <img class="member_img" src="images/member-natsu-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NAVI</p>
+				<p class="member_item_birth">BIRTH  3.20</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/navi_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/navi_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-navi-new.png">
+			  <img class="member_img2" src="images/member-navi-new.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
 				<p class="member_item_name">NICO</p>
+				<p class="member_item_birth">BIRTH  5.23</p>
 				<ul class="member_icon">
-					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.png" /></a></li>
-					<li><a href="https://x.com/nico_whsp"><img src="images/x.png" /></a></li>
-					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.png" /></a></li>
+					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.webp" /></a></li>
+					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
+					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-nico-new.png">
+			  <img class="member_img" src="images/member-nico-new.webp">
 		  </div>
 	  </article>
   </section>
@@ -217,14 +219,14 @@
   <section class="center">
   	  <h3>WHITE SCORPION X MEMBER LIST</h3>
 		<ul class="official_link">
-			<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.png" /></a></li>
+			<li><a href="https://x.com/i/lists/1736245709048107338?t=NrnFYQth0CkSVZOJOAs2Ww&s=09"><img src="images/x.webp" /></a></li>
 		</ul>
   	  <hr>
 	  <h3>TEAM OVERSE</h3>
 	  <div class="overse">
 		  <div class="overse_btn">
-		  	<img class="member_img" src="images/idol3.jpg">
-		  	<div><a href="https://idol3.github.io">IDOL3.0 PROJECT FINALIST</a></div>
+		  	<img class="member_img" src="images/idol3.webp">
+		  	<div><a href="https://i3pfan.github.io">IDOL3.0 PROJECT FINALIST</a></div>
 		  </div>
 	  </div>
 	  
