--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-ace"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/ace_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@su.___.uu"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ace-new.webp">
@@ -133,6 +134,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-aoi"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@___aoi_s2"><img src="images/tiktok.webp" /></a></li>
 					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
@@ -170,6 +172,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-hanna"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/hanna_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@hanna_whsp_1217"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-hanna-new.webp">
@@ -195,6 +198,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-natsu"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/natsu_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@imnatsuwhsp"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-natsu-new.webp">
@@ -207,6 +211,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-navi"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/navi_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@your_papillon.f"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-navi-new.webp">
@@ -219,6 +224,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-nico"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@smile_.nico"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-nico-new.webp">
