--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-choco"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/choco_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.webp" /></a></li>
+					<li><a href="https://www.tiktok.com/@choco._.nyan"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-choco-new.webp">
