--- a/tiktok.html
+++ b/tiktok.html
@@ -55,6 +55,14 @@
 	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@your_papillon.f" data-unique-id="your_papillon.f" data-embed-type="creator" data-autoplay="false" muted style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@your_papillon.f?refer=creator_embed">@your_papillon.f</a> </section> </blockquote>
 	<hr>
     <hr>
+	  <h3>ACE</h3>
+	<div><a href="https://www.tiktok.com/@su.___.uu"><img src="images/tiktok.webp" /></a></div>
+    <hr>
+	  <h3>HANNA</h3>
+	<div><a href="https://www.tiktok.com/@hanna_whsp_1217"><img src="images/tiktok.webp" /></a></div>
+    <hr>
+	  <h3>CHOCO</h3>					
+	  <div><a href="https://www.tiktok.com/@choco._.nyan"><img src="images/tiktok.webp" /></a></div>
 
 
 	<script async src="https://www.tiktok.com/embed.js"></script>
