--- a/tiktok.html
+++ b/tiktok.html
@@ -42,6 +42,10 @@
 	
 
   <section class="center">
+	<h3>公式</h3>
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_official" data-unique-id="whsp_official" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@whsp_official?refer=creator_embed">@whsp_official</a> </section> </blockquote>    <hr>
+	<h3>MANAGER</h3>
+<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@whsp_manager" data-unique-id="whsp_manager" data-embed-type="creator" style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@whsp_manager?refer=creator_embed">@whsp_manager</a> </section> </blockquote>    <hr>
 	<h3>AOI</h3>
 	<blockquote class="tiktok-embed" cite="https://www.tiktok.com/@___aoi_s2" data-unique-id="___aoi_s2" data-embed-type="creator" data-autoplay="false" muted style="max-width: 780px; min-width: 288px;" > <section> <a target="_blank" href="https://www.tiktok.com/@___aoi_s2?refer=creator_embed">@___aoi_s2</a> </section> </blockquote>
     <hr>
