--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <li><a href="#top">TOP</a></li>
         <li><a href="#music">MUSIC</a></li>
         <li> <a href="#members">MEMBER</a></li>
-      </ul>
+         <li> <a href="tiktok.html">TikTok</a></li>
+     </ul>
     </nav>
   </header>
 <!-- Main Container -->
