--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section class="media" id="music">
 	  <h2>MUSIC</h2>
 	<div class="youtube">
-		<iframe src="https://www.youtube.com/embed/R7IblQieikA?si=8_tbvROL_hKj05uJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/UyK2hTh3nlw?si=BaYJMXu4fFokW1AS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/21Ah8gRCamIrp3pYS0mBsO?utm_source=generator" width="780" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
