--- a/index.html
+++ b/index.html
@@ -65,6 +65,10 @@
 		<li><a href="https://lin.ee/D9cksiN"><img src="images/linem.webp" /></a></li>
 		<li><a href="https://music.amazon.co.jp/artists/B0CNSLKWL5?ref=dm_sh_EWmasNWqL8gjqZwbabcrd68PO"><img src="images/amazonm.webp" /></a></li>
 	</ul>
+	<ul class="official_link">
+		<li><a href="https://www.tfm.co.jp/torisetsu/"><img src="images/radio.webp" /></a></li>
+		<li><a href="https://www.showroom-live.com/r/whitescorpion"><img src="images/showroom.webp" /></a></li>
+	</ul>
     <hr>
 
 	<h3>WHITE SCORPION MANAGER</h3>
