--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
   <section class="media" id="music">
 	  <h2>MUSIC</h2>
 	<div class="youtube">
-		<iframe src="https://www.youtube.com/embed/UyK2hTh3nlw?si=BaYJMXu4fFokW1AS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+		<iframe src="https://www.youtube.com/embed/UyK2hTh3nlw?si=wsSat0RL03ywCxfr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/21Ah8gRCamIrp3pYS0mBsO?utm_source=generator" width="780" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3XH3MQal0Q5R6G53pE4pJS?utm_source=generator" width="780" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="430" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
