--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 					<li><a href="https://www.tiktok.com/@su.___.uu"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ace-new.webp">
+			  <img class="member_img" src="images/member-ace.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -116,7 +116,7 @@
 					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aco-new.webp">
+			  <img class="member_img2" src="images/member-aco.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -129,7 +129,7 @@
 					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-ally-new.webp">
+			  <img class="member_img" src="images/member-ally.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -143,7 +143,7 @@
 					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-aoi-new.webp">
+			  <img class="member_img2" src="images/member-aoi.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -156,7 +156,7 @@
 					<li><a href="https://www.tiktok.com/@choco._.nyan"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-choco-new.webp">
+			  <img class="member_img" src="images/member-choco.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -168,7 +168,7 @@
 					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-coco-new.webp">
+			  <img class="member_img2" src="images/member-coco.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -181,7 +181,7 @@
 					<li><a href="https://www.tiktok.com/@hanna_whsp_1217"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-hanna-new.webp">
+			  <img class="member_img" src="images/member-hanna.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -194,7 +194,7 @@
 					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-momo-new.webp">
+			  <img class="member_img2" src="images/member-momo.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -207,7 +207,7 @@
 					<li><a href="https://www.tiktok.com/@imnatsuwhsp"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-natsu-new.webp">
+			  <img class="member_img" src="images/member-natsu.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -220,7 +220,7 @@
 					<li><a href="https://www.tiktok.com/@your_papillon.f"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img2" src="images/member-navi-new.webp">
+			  <img class="member_img2" src="images/member-navi.webp">
 		  </div>
 		  <div class="member_item">
 			  <div class="member_item_list">
@@ -233,7 +233,7 @@
 					<li><a href="https://www.tiktok.com/@smile_.nico"><img src="images/tiktok.webp" /></a></li>
 				</ul>
 			  </div>
-			  <img class="member_img" src="images/member-nico-new.webp">
+			  <img class="member_img" src="images/member-nico.webp">
 		  </div>
 	  </article>
  	  <hr>
