--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 					<li><a href="https://whitescorpion.jp/member/#member-momo"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.webp" /></a></li>
-					<li><a href="https://radiotalk.jp/program/93139"><img src="images/04MIibLq_400x400.jpg" /></a></li>
+					<li><a href="https://radiotalk.jp/program/93139"><img src="images/gocha.webp" /></a></li>
 					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
