--- a/index.html
+++ b/index.html
@@ -83,7 +83,6 @@
 		<iframe src="https://www.youtube.com/embed/UyK2hTh3nlw?si=wsSat0RL03ywCxfr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 	</div>
 	<div class="spotify">
-		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3XH3MQal0Q5R6G53pE4pJS?utm_source=generator" width="780" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 		<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/5LNpqa89tsQv64QYzfvsE5?utm_source=generator&theme=0" width="780" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
 	</div>
 
@@ -140,6 +139,7 @@
 					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@___aoi_s2"><img src="images/tiktok.webp" /></a></li>
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513582"><img src="images/showroom.webp" /></a></li>
 					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
