--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@
 					<li><a href="https://x.com/aoi_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/aoi_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@___aoi_s2"><img src="images/tiktok.webp" /></a></li>
+				</ul>
+				<ul class="member_icon">
 					<li><a href="https://www.showroom-live.com/room/profile?room_id=513582"><img src="images/showroom.webp" /></a></li>
 					<li><a href="https://m.youtube.com/watch?v=31zIT_LQJDM&t=4020"><img src="images/youtube.webp" /></a></li>
 				</ul>
