--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
 					<li><a href="https://www.instagram.com/ace_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@su.___.uu"><img src="images/tiktok.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513578"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ace.webp">
 		  </div>
@@ -114,6 +117,9 @@
 					<li><a href="https://x.com/aco_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/aco_whsp_ig"><img src="images/insta.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513580"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-aco.webp">
 		  </div>
@@ -125,6 +131,9 @@
 					<li><a href="https://whitescorpion.jp/member/#member-ally"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/ally_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/ally_whsp_ig"><img src="images/insta.webp" /></a></li>
+				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513581"><img src="images/showroom.webp" /></a></li>
 					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
@@ -157,6 +166,9 @@
 					<li><a href="https://www.instagram.com/choco_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@choco._.nyan"><img src="images/tiktok.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513583"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-choco.webp">
 		  </div>
@@ -168,6 +180,9 @@
 					<li><a href="https://whitescorpion.jp/member/#member-coco"><img src="images/web.webp" /></a></li>
 					<li><a href="https://x.com/coco_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/coco_whsp_ig"><img src="images/insta.webp" /></a></li>
+				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513584"><img src="images/showroom.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-coco.webp">
@@ -182,6 +197,9 @@
 					<li><a href="https://www.instagram.com/hanna_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@hanna_whsp_1217"><img src="images/tiktok.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513585"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-hanna.webp">
 		  </div>
@@ -194,6 +212,9 @@
 					<li><a href="https://x.com/momo_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/momo_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://radiotalk.jp/program/93139"><img src="images/gocha.webp" /></a></li>
+				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513586"><img src="images/showroom.webp" /></a></li>
 					<li><a href="https://m.youtube.com/watch?v=j-KkANNsZJs&t=3960"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
@@ -209,6 +230,9 @@
 					<li><a href="https://www.instagram.com/natsu_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@imnatsuwhsp"><img src="images/tiktok.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513587"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-natsu.webp">
 		  </div>
@@ -222,6 +246,9 @@
 					<li><a href="https://www.instagram.com/navi_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@your_papillon.f"><img src="images/tiktok.webp" /></a></li>
 				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513588"><img src="images/showroom.webp" /></a></li>
+				</ul>
 			  </div>
 			  <img class="member_img2" src="images/member-navi.webp">
 		  </div>
@@ -234,6 +261,9 @@
 					<li><a href="https://x.com/nico_whsp"><img src="images/x.webp" /></a></li>
 					<li><a href="https://www.instagram.com/nico_whsp_ig"><img src="images/insta.webp" /></a></li>
 					<li><a href="https://www.tiktok.com/@smile_.nico"><img src="images/tiktok.webp" /></a></li>
+				</ul>
+				<ul class="member_icon">
+					<li><a href="https://www.showroom-live.com/room/profile?room_id=513589"><img src="images/showroom.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-nico.webp">
