--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 				</ul>
 				<ul class="member_icon">
 					<li><a href="https://www.showroom-live.com/room/profile?room_id=513581"><img src="images/showroom.webp" /></a></li>
-					<li><a href="https://youtu.be/5Re0uLRoXTc?feature=shared"><img src="images/youtube.webp" /></a></li>
+					<li><a href="https://youtu.be/aWSWfOSLCZU?si=5Q3jdAqTql9uYjbX"><img src="images/youtube.webp" /></a></li>
 				</ul>
 			  </div>
 			  <img class="member_img" src="images/member-ally.webp">
